@@ -1,3 +1,9 @@
+2008-09-17  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR c++/37450
+	* name-lookup.c (pushdecl_maybe_friend): Don't return the old
+	parameter for duplicate.
+
 2008-09-17  Jason Merrill  <jason@redhat.com>
 
 	PR c++/37588
